Modal details and button color checked

--- a/src/components/hour-evaluation.html
+++ b/src/components/hour-evaluation.html
@@ -350,9 +350,9 @@
                               type="button"
                               class="btn mr-2 mb-2 btn-primary"
                               data-toggle="modal"
-                              data-target="#exampleModal"
+                              data-target="#exampleModalTAY"
                             >
-                              Basic Modal
+                              View
                             </button>
                           </td>
                         </tr>
@@ -368,6 +368,16 @@
                               Declined
                             </div>
                           </td>
+                          <td>
+                            <button
+                              type="button"
+                              class="btn mr-2 mb-2 btn-primary"
+                              data-toggle="modal"
+                              data-target="#exampleModalTAY"
+                            >
+                              View
+                            </button>
+                          </td>
                         </tr>
                         <tr>
                           <th scope="row">3</th>
@@ -375,11 +385,21 @@
                           <td>B00891217</td>
                           <td>CSCI 1186</td>
                           <td>108052</td>
-                          <td>4:30AM, Jan 5, 2020</td>
+                          <td>04:30AM, Jan 05, 2020</td>
                           <td>
                             <div class="mb-2 mr-2 badge badge-warning">
                               Pending
                             </div>
+                          </td>
+                          <td>
+                            <button
+                              type="button"
+                              class="btn mr-2 mb-2 btn-primary"
+                              data-toggle="modal"
+                              data-target="#exampleModalTAN"
+                            >
+                              View
+                            </button>
                           </td>
                         </tr>
                       </tbody>
@@ -394,7 +414,7 @@
               >
                 <div class="main-card mb-3 card">
                   <div class="card-body">
-                    <h5 class="card-title">Marker Hours Approval</h5>
+                    <h5 class="card-title">Markers Hours Approval</h5>
                     <table class="mb-0 table table-hover">
                       <thead>
                         <tr>
@@ -405,6 +425,7 @@
                           <th>CRN</th>
                           <th>Submission Time</th>
                           <th>Status</th>
+                          <th>Details</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -415,7 +436,21 @@
                           <td>CSCI 1180</td>
                           <td>108050</td>
                           <td>12:30PM, Jan 18, 2020</td>
-                          <td>Approved</td>
+                          <td>
+                            <div class="mb-2 mr-2 badge badge-success">
+                              Approved
+                            </div>
+                          </td>
+                          <td>
+                            <button
+                              type="button"
+                              class="btn mr-2 mb-2 btn-primary"
+                              data-toggle="modal"
+                              data-target="#exampleModalMkY"
+                            >
+                              View
+                            </button>
+                          </td>
                         </tr>
                         <tr>
                           <th scope="row">2</th>
@@ -424,7 +459,21 @@
                           <td>CSCI 1183</td>
                           <td>108051</td>
                           <td>12:00AM, Jan 20, 2020</td>
-                          <td>Declined</td>
+                          <td>
+                            <div class="mb-2 mr-2 badge badge-danger">
+                              Declined
+                            </div>
+                          </td>
+                          <td>
+                            <button
+                              type="button"
+                              class="btn mr-2 mb-2 btn-primary"
+                              data-toggle="modal"
+                              data-target="#exampleModalMkY"
+                            >
+                              View
+                            </button>
+                          </td>
                         </tr>
                         <tr>
                           <th scope="row">3</th>
@@ -432,8 +481,22 @@
                           <td>B00891217</td>
                           <td>CSCI 1186</td>
                           <td>108052</td>
-                          <td>4:30AM, Jan 5, 2020</td>
-                          <td>Pending</td>
+                          <td>04:30AM, Jan 05, 2020</td>
+                          <td>
+                            <div class="mb-2 mr-2 badge badge-warning">
+                              Pending
+                            </div>
+                          </td>
+                          <td>
+                            <button
+                              type="button"
+                              class="btn mr-2 mb-2 btn-primary"
+                              data-toggle="modal"
+                              data-target="#exampleModalMkN"
+                            >
+                              View
+                            </button>
+                          </td>
                         </tr>
                       </tbody>
                     </table>
@@ -502,16 +565,10 @@
       // ]]>
     </script>
 
-    <!-- Large modal -->
-
-    <!-- Small modal -->
-
-    <!-- Modal -->
-
-    <!-- Modal -->
+    <!-- Modal TA Done-->
     <div
       class="modal fade"
-      id="exampleModal"
+      id="exampleModalTAY"
       tabindex="-1"
       role="dialog"
       aria-labelledby="exampleModalLabel"
@@ -521,7 +578,7 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <h5 class="modal-title" id="exampleModalLabel">Details</h5>
             <button
               type="button"
               class="close"
@@ -532,11 +589,32 @@
             </button>
           </div>
           <div class="modal-body">
-            <p class="mb-0">
-              Lorem Ipsum has been the industry's standard dummy text ever since
-              the 1500s, when an unknown printer took a galley of type and
-              scrambled.
-            </p>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">
+                  Emplyoyee Name: Abdullah X
+                </li>
+                <li class="list-group-item">Current Dal Student: Yes</li>
+                <li class="list-group-item">ID# B00xxxxxx</li>
+                <li class="list-group-item">
+                  Course ID &amp; CRN no: CSCI 8000 &sol; 123456
+                </li>
+                <li class="list-group-item">Term: Summer</li>
+                <li class="list-group-item">Year: 2020</li>
+              </ul>
+            </div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">Position: TA</li>
+                <li class="list-group-item">Total Hours: 130</li>
+                <li class="list-group-item">In-Class Duties: 70</li>
+                <li class="list-group-item">Office Duties: 10</li>
+                <li class="list-group-item">
+                  Marking, Grading, Invigilating: 10
+                </li>
+                <li class="list-group-item">Others (Labs): 40</li>
+              </ul>
+            </div>
           </div>
           <div class="modal-footer">
             <button
@@ -546,7 +624,195 @@
             >
               Close
             </button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal TA Undone-->
+    <div
+      class="modal fade"
+      id="exampleModalTAN"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalLabel"
+      style="display: none;"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Details</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">×</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">
+                  Emplyoyee Name: Abdullah X
+                </li>
+                <li class="list-group-item">Current Dal Student: Yes</li>
+                <li class="list-group-item">ID# B00xxxxxx</li>
+                <li class="list-group-item">
+                  Course ID &amp; CRN no: CSCI 8000 &sol; 123456
+                </li>
+                <li class="list-group-item">Term: Summer</li>
+                <li class="list-group-item">Year: 2020</li>
+              </ul>
+            </div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">Position: TA</li>
+                <li class="list-group-item">Total Hours: 130</li>
+                <li class="list-group-item">In-Class Duties: 70</li>
+                <li class="list-group-item">Office Duties: 10</li>
+                <li class="list-group-item">
+                  Marking, Grading, Invigilating: 10
+                </li>
+                <li class="list-group-item">Others (Labs): 40</li>
+              </ul>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-success" data-dismiss="modal">
+              Approve
+            </button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">
+              Decline
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal Marker Done-->
+    <div
+      class="modal fade"
+      id="exampleModalMkY"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalLabel"
+      style="display: none;"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Details</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">×</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">
+                  Emplyoyee Name: Abdullah X
+                </li>
+                <li class="list-group-item">Current Dal Student: Yes</li>
+                <li class="list-group-item">ID# B00xxxxxx</li>
+                <li class="list-group-item">
+                  Course ID &amp; CRN no: CSCI 8000 &sol; 123456
+                </li>
+                <li class="list-group-item">Term: Summer</li>
+                <li class="list-group-item">Year: 2020</li>
+              </ul>
+            </div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">Position: Marker</li>
+                <li class="list-group-item">Total Hours: 20</li>
+              </ul>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Modal TA Undone-->
+    <div
+      class="modal fade"
+      id="exampleModalMkN"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalLabel"
+      style="display: none;"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Details</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">×</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">
+                  Emplyoyee Name: Abdullah X
+                </li>
+                <li class="list-group-item">Current Dal Student: Yes</li>
+                <li class="list-group-item">ID# B00xxxxxx</li>
+                <li class="list-group-item">
+                  Course ID &amp; CRN no: CSCI 8000 &sol; 123456
+                </li>
+                <li class="list-group-item">Term: Summer</li>
+                <li class="list-group-item">Year: 2020</li>
+              </ul>
+            </div>
+            <div class="card-body">
+              <ul class="list-group">
+                <li class="list-group-item">Position: Marker</li>
+                <li class="list-group-item">Total Hours: 10</li>
+              </ul>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-success" data-dismiss="modal">
+              Approve
+            </button>
+            <button type="button" class="btn btn-danger" data-dismiss="modal">
+              Decline
+            </button>
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
           </div>
         </div>
       </div>
