--- a/src/components/hour-sub-form.html
+++ b/src/components/hour-sub-form.html
@@ -809,13 +809,13 @@
                     <h5 class="card-title">Basic Information</h5>
                     <ul class="list-group">
                       <li class="list-group-item">
-                        Emplyoyee Name: Abdullah x
+                        Emplyoyee Name: Abdullah X
                       </li>
-                      <li class="list-group-item">Current Dal student: Yes</li>
+                      <li class="list-group-item">Current Dal Student: Yes</li>
                       <li class="list-group-item">ID# B00xxxxxx</li>
-                      <li class="list-group-item">Instructor: Andrew x</li>
+                      <li class="list-group-item">Instructor: Andrew X</li>
                       <li class="list-group-item">
-                        Course ID &amp; CRN no: CSCI 8000 123456
+                        Course ID &amp; CRN no: CSCI 8000 &sol; 123456
                       </li>
                       <li class="list-group-item">Term: Summer</li>
                       <li class="list-group-item">Year: 2020</li>
@@ -925,13 +925,13 @@
                     <h5 class="card-title">Basic Information</h5>
                     <ul class="list-group">
                       <li class="list-group-item">
-                        Emplyoyee Name: Abdullah x
+                        Emplyoyee Name: Abdullah X
                       </li>
-                      <li class="list-group-item">Current Dal student: Yes</li>
+                      <li class="list-group-item">Current Dal Student: No</li>
                       <li class="list-group-item">ID# B00xxxxxx</li>
                       <li class="list-group-item">Instructor: Andrew x</li>
                       <li class="list-group-item">
-                        Course ID &amp; CRN no: CSCI 8000 123456
+                        Course ID &amp; CRN no: CSCI 8000 &sol; 123456
                       </li>
                       <li class="list-group-item">Term: Summer</li>
                       <li class="list-group-item">Year: 2020</li>
