Added responsive table

--- a/src/components/hour-evaluation.html
+++ b/src/components/hour-evaluation.html
@@ -319,91 +319,93 @@
                 <div class="main-card mb-3 card">
                   <div class="card-body">
                     <h5 class="card-title">TA Hours Approval</h5>
-                    <table class="mb-0 table table-hover">
-                      <thead>
-                        <tr>
-                          <th>#</th>
-                          <th>Full Name</th>
-                          <th>B00#</th>
-                          <th>Course ID</th>
-                          <th>CRN</th>
-                          <th>Submission Time</th>
-                          <th>Status</th>
-                          <th>Details</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <th scope="row">1</th>
-                          <td>Mark Otto</td>
-                          <td>B00891215</td>
-                          <td>CSCI 1180</td>
-                          <td>108050</td>
-                          <td>12:30PM, Jan 18, 2020</td>
-                          <td>
-                            <div class="mb-2 mr-2 badge badge-success">
-                              Approved
-                            </div>
-                          </td>
-                          <td>
-                            <button
-                              type="button"
-                              class="btn mr-2 mb-2 btn-primary"
-                              data-toggle="modal"
-                              data-target="#exampleModalTAY"
-                            >
-                              View
-                            </button>
-                          </td>
-                        </tr>
-                        <tr>
-                          <th scope="row">2</th>
-                          <td>Sreya Goshal</td>
-                          <td>B00891216</td>
-                          <td>CSCI 1183</td>
-                          <td>108051</td>
-                          <td>12:00AM, Jan 20, 2020</td>
-                          <td>
-                            <div class="mb-2 mr-2 badge badge-danger">
-                              Declined
-                            </div>
-                          </td>
-                          <td>
-                            <button
-                              type="button"
-                              class="btn mr-2 mb-2 btn-primary"
-                              data-toggle="modal"
-                              data-target="#exampleModalTAY"
-                            >
-                              View
-                            </button>
-                          </td>
-                        </tr>
-                        <tr>
-                          <th scope="row">3</th>
-                          <td>Hassan Saleh</td>
-                          <td>B00891217</td>
-                          <td>CSCI 1186</td>
-                          <td>108052</td>
-                          <td>04:30AM, Jan 05, 2020</td>
-                          <td>
-                            <div class="mb-2 mr-2 badge badge-warning">
-                              Pending
-                            </div>
-                          </td>
-                          <td>
-                            <button
-                              type="button"
-                              class="btn mr-2 mb-2 btn-primary"
-                              data-toggle="modal"
-                              data-target="#exampleModalTAN"
-                            >
-                              View
-                            </button>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
+                    <div class="table-responsive">
+                      <table class="mb-0 table table-hover">
+                        <thead>
+                          <tr>
+                            <th>#</th>
+                            <th>Full Name</th>
+                            <th>B00#</th>
+                            <th>Course ID</th>
+                            <th>CRN</th>
+                            <th>Submission Time</th>
+                            <th>Status</th>
+                            <th>Details</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row">1</th>
+                            <td>Mark Otto</td>
+                            <td>B00891215</td>
+                            <td>CSCI 1180</td>
+                            <td>108050</td>
+                            <td>12:30PM, Jan 18, 2020</td>
+                            <td>
+                              <div class="mb-2 mr-2 badge badge-success">
+                                Approved
+                              </div>
+                            </td>
+                            <td>
+                              <button
+                                type="button"
+                                class="btn mr-2 mb-2 btn-primary"
+                                data-toggle="modal"
+                                data-target="#exampleModalTAY"
+                              >
+                                View
+                              </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row">2</th>
+                            <td>Sreya Goshal</td>
+                            <td>B00891216</td>
+                            <td>CSCI 1183</td>
+                            <td>108051</td>
+                            <td>12:00AM, Jan 20, 2020</td>
+                            <td>
+                              <div class="mb-2 mr-2 badge badge-danger">
+                                Declined
+                              </div>
+                            </td>
+                            <td>
+                              <button
+                                type="button"
+                                class="btn mr-2 mb-2 btn-primary"
+                                data-toggle="modal"
+                                data-target="#exampleModalTAY"
+                              >
+                                View
+                              </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row">3</th>
+                            <td>Hassan Saleh</td>
+                            <td>B00891217</td>
+                            <td>CSCI 1186</td>
+                            <td>108052</td>
+                            <td>04:30AM, Jan 05, 2020</td>
+                            <td>
+                              <div class="mb-2 mr-2 badge badge-warning">
+                                Pending
+                              </div>
+                            </td>
+                            <td>
+                              <button
+                                type="button"
+                                class="btn mr-2 mb-2 btn-primary"
+                                data-toggle="modal"
+                                data-target="#exampleModalTAN"
+                              >
+                                View
+                              </button>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -415,91 +417,93 @@
                 <div class="main-card mb-3 card">
                   <div class="card-body">
                     <h5 class="card-title">Markers Hours Approval</h5>
-                    <table class="mb-0 table table-hover">
-                      <thead>
-                        <tr>
-                          <th>#</th>
-                          <th>Full Name</th>
-                          <th>B00#</th>
-                          <th>Course ID</th>
-                          <th>CRN</th>
-                          <th>Submission Time</th>
-                          <th>Status</th>
-                          <th>Details</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <th scope="row">1</th>
-                          <td>Mark Otto</td>
-                          <td>B00891215</td>
-                          <td>CSCI 1180</td>
-                          <td>108050</td>
-                          <td>12:30PM, Jan 18, 2020</td>
-                          <td>
-                            <div class="mb-2 mr-2 badge badge-success">
-                              Approved
-                            </div>
-                          </td>
-                          <td>
-                            <button
-                              type="button"
-                              class="btn mr-2 mb-2 btn-primary"
-                              data-toggle="modal"
-                              data-target="#exampleModalMkY"
-                            >
-                              View
-                            </button>
-                          </td>
-                        </tr>
-                        <tr>
-                          <th scope="row">2</th>
-                          <td>Sreya Goshal</td>
-                          <td>B00891216</td>
-                          <td>CSCI 1183</td>
-                          <td>108051</td>
-                          <td>12:00AM, Jan 20, 2020</td>
-                          <td>
-                            <div class="mb-2 mr-2 badge badge-danger">
-                              Declined
-                            </div>
-                          </td>
-                          <td>
-                            <button
-                              type="button"
-                              class="btn mr-2 mb-2 btn-primary"
-                              data-toggle="modal"
-                              data-target="#exampleModalMkY"
-                            >
-                              View
-                            </button>
-                          </td>
-                        </tr>
-                        <tr>
-                          <th scope="row">3</th>
-                          <td>Hassan Saleh</td>
-                          <td>B00891217</td>
-                          <td>CSCI 1186</td>
-                          <td>108052</td>
-                          <td>04:30AM, Jan 05, 2020</td>
-                          <td>
-                            <div class="mb-2 mr-2 badge badge-warning">
-                              Pending
-                            </div>
-                          </td>
-                          <td>
-                            <button
-                              type="button"
-                              class="btn mr-2 mb-2 btn-primary"
-                              data-toggle="modal"
-                              data-target="#exampleModalMkN"
-                            >
-                              View
-                            </button>
-                          </td>
-                        </tr>
-                      </tbody>
-                    </table>
+                    <div class="table-responsive">
+                      <table class="mb-0 table table-hover">
+                        <thead>
+                          <tr>
+                            <th>#</th>
+                            <th>Full Name</th>
+                            <th>B00#</th>
+                            <th>Course ID</th>
+                            <th>CRN</th>
+                            <th>Submission Time</th>
+                            <th>Status</th>
+                            <th>Details</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <th scope="row">1</th>
+                            <td>Mark Otto</td>
+                            <td>B00891215</td>
+                            <td>CSCI 1180</td>
+                            <td>108050</td>
+                            <td>12:30PM, Jan 18, 2020</td>
+                            <td>
+                              <div class="mb-2 mr-2 badge badge-success">
+                                Approved
+                              </div>
+                            </td>
+                            <td>
+                              <button
+                                type="button"
+                                class="btn mr-2 mb-2 btn-primary"
+                                data-toggle="modal"
+                                data-target="#exampleModalMkY"
+                              >
+                                View
+                              </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row">2</th>
+                            <td>Sreya Goshal</td>
+                            <td>B00891216</td>
+                            <td>CSCI 1183</td>
+                            <td>108051</td>
+                            <td>12:00AM, Jan 20, 2020</td>
+                            <td>
+                              <div class="mb-2 mr-2 badge badge-danger">
+                                Declined
+                              </div>
+                            </td>
+                            <td>
+                              <button
+                                type="button"
+                                class="btn mr-2 mb-2 btn-primary"
+                                data-toggle="modal"
+                                data-target="#exampleModalMkY"
+                              >
+                                View
+                              </button>
+                            </td>
+                          </tr>
+                          <tr>
+                            <th scope="row">3</th>
+                            <td>Hassan Saleh</td>
+                            <td>B00891217</td>
+                            <td>CSCI 1186</td>
+                            <td>108052</td>
+                            <td>04:30AM, Jan 05, 2020</td>
+                            <td>
+                              <div class="mb-2 mr-2 badge badge-warning">
+                                Pending
+                              </div>
+                            </td>
+                            <td>
+                              <button
+                                type="button"
+                                class="btn mr-2 mb-2 btn-primary"
+                                data-toggle="modal"
+                                data-target="#exampleModalMkN"
+                              >
+                                View
+                              </button>
+                            </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
                   </div>
                 </div>
               </div>
