--- a/src/components/login.html
+++ b/src/components/login.html
@@ -1,119 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta http-equiv="Content-Language" content="en" />
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>
-      DALTAMS - Dalhousie Computer Science.
-    </title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"
-    />
-    <meta
-      name="description"
-      content="Build whatever layout you need with our Architect framework."
-    />
-    <meta name="msapplication-tap-highlight" content="no" />
-    <!--
-    =========================================================
-    * ArchitectUI HTML Theme Dashboard - v1.0.0
-    =========================================================
-    * Product Page: https://dashboardpack.com
-    * Copyright 2019 DashboardPack (https://dashboardpack.com)
-    * Licensed under MIT (https://github.com/DashboardPack/architectui-html-theme-free/blob/master/LICENSE)
-    =========================================================
-    * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-    -->
-    <link
-      href="../styles/architectui-html-free/architectui-html-free/main.css"
-      rel="stylesheet"
-    />
-    <style>
-      .main-card {
-        margin: 0 auto !important;
-        float: none !important;
-        margin-bottom: 10px !important;
-      }
-    </style>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta http-equiv="Content-Language" content="en" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>
+    DALTAMS - Dalhousie Computer Science.
+  </title>
+  <meta
+  name="viewport"
+  content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"
+  />
+  <meta
+  name="description"
+  content="Build whatever layout you need with our Architect framework."
+  />
+  <meta name="msapplication-tap-highlight" content="no" />
+  <!--
+  =========================================================
+  * ArchitectUI HTML Theme Dashboard - v1.0.0
+  =========================================================
+  * Product Page: https://dashboardpack.com
+  * Copyright 2019 DashboardPack (https://dashboardpack.com)
+  * Licensed under MIT (https://github.com/DashboardPack/architectui-html-theme-free/blob/master/LICENSE)
+  =========================================================
+  * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+-->
+<link
+href="../styles/architectui-html-free/architectui-html-free/main.css"
+rel="stylesheet"
+/>
+<style>
+.form-signin {
+width: 100%;
+max-width: 330px;
+padding: 15px;
+margin: 0 auto;
+}
+</style>
+</head>
 
-  <body>
-    <div
-      class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header"
-    >
-      <div class="app-main">
-        <div class="app-main__outer">
-          <div class="app-main__inner">
-            <div class="app-page-title">
-              <div class="page-title-wrapper">
-                <div class="page-title-heading">
-                  <div class="page-title-icon">
-                    <i class="pe-7s-graph text-success"> </i>
-                  </div>
-                  <div>
-                    DALTAMS
-                    <div class="page-title-subheading">
-                      Dalhousie University - Computer Science.
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="tab-content">
-              <div
-                class="tab-pane tabs-animation fade show active"
-                id="tab-content-0"
-                role="tabpanel"
-              >
-                <div class="main-card mb-3 mr-xl-5 card">
-                  <div class="card-body">
-                    <h5 class="card-title">
-                      Enter your NetID and Password
-                    </h5>
-                    <form class="">
-                      <div class="form-row">
-                        <div class="col-md-6">
-                          <div class="position-relative form-group">
-                            <label for="validationCustomUsername" class="">Username</label
-                            ><input type="text"
-                            class="form-control" id="validationCustomUsername"
-                            placeholder="username placeholder"
-                            aria-describedby="inputGroupPrepend" required>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="form-row">
-                        <div class="col-md-6">
-                          <div class="position-relative form-group">
-                            <label for="examplePassword11" class=""
-                              >Password</label
-                            ><input
-                              name="password"
-                              id="examplePassword11"
-                              placeholder="password placeholder"
-                              type="password"
-                              class="form-control"
-
-                            />
-                          </div>
-                        </div>
-                      </div>
-                      <button class="mt-2 btn btn-primary">Sign in</button>
-                    </form>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+<body class="text-center">
+  <form class="form-signin">
+    <img class="mb-4" src="../assets/img/CompanyLogo.png" alt="Company Logo" width="144" height="144">
+    <h1 class="h3 mb-3 font-weight-normal">DalTAMS</h1>
+    <h2 class="h3 mb-3 font-weight-normal">Sign in</h2>
+    <label for="inputEmail" class="sr-only">Email address</label>
+    <input type="email" id="inputEmail" class="form-control" placeholder="NetID" required="" autofocus="">
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+    <div class="checkbox mb-3">
+      <label>
+        <input type="checkbox" value="remember-me"> Remember me
+      </label>
     </div>
-    <script
-      type="text/javascript"
-      src="../styles/architectui-html-free/architectui-html-free/assets/scripts/main.js"
-    ></script>
-  </body>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+  </form>
+  <script>
+  type="text/javascript"
+  src="../styles/architectui-html-free/architectui-html-free/assets/scripts/main.js"
+</script>
+</body>
 </html>
